--- a/peloton-clone/peloton-clone/App.xaml
+++ b/peloton-clone/peloton-clone/App.xaml
@@ -8,25 +8,16 @@
     <Application.Resources>
         <ResourceDictionary>
             <Color x:Key="Primary">#2196F3</Color>
-            <Style TargetType="Button">
-                <Setter Property="TextColor" Value="White"></Setter>
-                <Setter Property="VisualStateManager.VisualStateGroups">
-                    <VisualStateGroupList>
-                        <VisualStateGroup x:Name="CommonStates">
-                            <VisualState x:Name="Normal">
-                                <VisualState.Setters>
-                                    <Setter Property="BackgroundColor" Value="{StaticResource Primary}" />
-                                </VisualState.Setters>
-                            </VisualState>
-                            <VisualState x:Name="Disabled">
-                                <VisualState.Setters>
-                                    <Setter Property="BackgroundColor" Value="#332196F3" />
-                                </VisualState.Setters>
-                            </VisualState>
-                        </VisualStateGroup>
-                    </VisualStateGroupList>
-                </Setter>
-            </Style>
+            <Color x:Key="Background">#D4D5DB</Color>
+            <Color x:Key="TabBarBackground">#FAF8FA</Color>
+            <Color x:Key="CardBackground">#FFFEFF</Color>
+            <Color x:Key="ButtonOutline">#686E7A</Color>
+            <Color x:Key="Accent">#FF344A</Color>
+
+            <Color x:Key="TabIconSelected">#F44257</Color>
+            <Color x:Key="TabIconUnselected">#2C2D31</Color>
+            <Color x:Key="TextPrimary">#25272C</Color>
+            <Color x:Key="TextSecondary">#606572</Color>
         </ResourceDictionary>        
     </Application.Resources>
 </Application>
