--- a/peloton-clone/peloton-clone/Views/ChallengesPage.xaml
+++ b/peloton-clone/peloton-clone/Views/ChallengesPage.xaml
@@ -1,12 +1,45 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PelotonCloneApp.Views.ChallengesPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+             x:Class="PelotonCloneApp.Views.ChallengesPage"
+             BackgroundColor="{StaticResource Background}">
+    <Grid RowDefinitions="*,Auto" Padding="6">
+        <CarouselView>
+            <CarouselView.ItemsSource>
+                <x:Array Type="{x:Type x:String}">
+                    <x:String>Item One</x:String>
+                    <x:String>Item Two</x:String>
+                    <x:String>Item Three</x:String>
+                </x:Array>
+            </CarouselView.ItemsSource>
+            <CarouselView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Padding="16, 0, 0, 0" >
+                        <Frame 
+                        CornerRadius="8" 
+                        WidthRequest="320"
+                        BackgroundColor="{StaticResource CardBackground}"
+                        HasShadow="True" 
+                        Padding="0,0,4,0">
+                            <Grid RowDefinitions="160,Auto,Auto">
+                                <BoxView BackgroundColor="Black" />
+                                <Label Grid.Row="1"
+                                   Margin="16,4, 0, 0" 
+                                   FontAttributes="Bold"
+                                   FontSize="Medium"
+                                   Text="Challenge" 
+                                   TextColor="{StaticResource TextSecondary}"/>
+                                <Label Grid.Row="2"
+                                   Margin="16,0, 0, 6" 
+                                   FontSize="Medium"
+                                   Text="Challenge Type"
+                                   TextColor="{StaticResource TextPrimary}"/>
+
+                            </Grid>
+                        </Frame>
+                    </Grid>
+                </DataTemplate>
+            </CarouselView.ItemTemplate>
+        </CarouselView>
+    </Grid>
 </ContentPage>
